--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <h1 class="col-7 text-center mt-2">Crypto Tracker</h1>
-            <h4 class="col-7 text-center mt-2">By PRATEEK KUMAR MAHAPATRA</h4>
-            <div class="col-md-6 row justify-content-center main fix" id="allContaint">
+            <h4 class="col-7 text-center mt-2">By Prateek Kumar Mahapatra</h4>
+            <div class="col-md-6 row justify-content-center main fix">
                 <div class="col-10">
                     <form action="" id="searchForm">
                         <div class="form-row">
@@ -23,12 +23,11 @@
                                     <span style="font-weight: 700;">Coin Type</span> 
                                 </label>
                                 <select name="coinType" class="form-control" id="coin">
-                                    <option value="btc-usd">Bitcoin - USD</option>
-                                    <option value="doge-usd">Dogecoin - USD</option>
-                                    <option value="eth-usd">Ethereum - USD</option>
-                                    <option value="btc-doge">Bitcoin - Dogecoin</option>
-                                    <option value="btc-eth">Bitcoin - Ether</option>
-                                    <option value="bnb-usd">Binance - USD</option>
+                                    <option value="bitcoin">Bitcoin</option>
+                                    <option value="dogecoin">Dogecoin</option>
+                                    <option value="ethereum">Ethereum</option>
+                                    <option value="polkadot">Polkadot</option>
+                                    <option value="tether">Tether</option>
                                 </select>
                             </div>
                         </div>
